--- a/arch/arm64/configs/rise-a5y17lte_defconfig
+++ b/arch/arm64/configs/rise-a5y17lte_defconfig
@@ -287,6 +287,7 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_ROW is not set
@@ -297,6 +298,7 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -4494,7 +4496,7 @@ CONFIG_AUDIT_COMPAT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
-CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZO_DECOMPRESS=ydb5e41c5844c9541b9fd16e8cd6479a8683ce40a
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
