--- a/arch/arm64/configs/oneui-a7y17lte_defconfig
+++ b/arch/arm64/configs/oneui-a7y17lte_defconfig
@@ -290,6 +290,7 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_VR=y
 # CONFIG_DEFAULT_NOOP is not set
@@ -298,6 +299,7 @@ CONFIG_IOSCHED_VR=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_VR is not set
