--- a/arch/arm64/configs/rise-a5y17lte_defconfig
+++ b/arch/arm64/configs/rise-a5y17lte_defconfig
@@ -323,6 +323,8 @@ CONFIG_FREEZER=y
 #
 CONFIG_ARCH_EXYNOS=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 # CONFIG_SOC_EXYNOS7870 is not set
 CONFIG_ARCH_EXYNOS7=y
 CONFIG_SOC_EXYNOS7880=y
