a(5|7)y17lte: enable extending cmdline with kernel one
Change-Id: Ifd31333f22303bb5a07ad3cd654720e2a7dcfc50

--- a/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
@@ -2521,6 +2521,9 @@ CONFIG_MALI_PLATFORM_NAME="exynos"
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 CONFIG_FB_CMDLINE=y
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
 CONFIG_FB_CFB_FILLRECT=y
