--- a/arch/arm64/configs/oneui-a5y17lte_defconfig
+++ b/arch/arm64/configs/oneui-a5y17lte_defconfig
@@ -565,6 +565,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND_X is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
@@ -589,6 +590,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_X=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
