cpufreq: smartmax Governor
Signed-off-by: djb77 <dwayne.bakewell@gmail.com>
Signed-off-by: corsicanu <corsicanu22@gmail.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -203,6 +203,12 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASS2
 	help
 	  Use the CPUFreq governor 'smartass2' as default.
 
+config CPU_FREQ_DEFAULT_GOV_SMARTMAX
+	bool "smartmax"
+	select CPU_FREQ_GOV_SMARTMAX
+	help
+	  Use the CPUFreq governor 'smartmax' as default.
+
 config CPU_FREQ_DEFAULT_GOV_USERSPACE
 	bool "userspace"
 	select CPU_FREQ_GOV_USERSPACE
@@ -515,6 +521,13 @@ config CPU_FREQ_GOV_SMARTASS2
 	help
 	  'smartassV2' - a "smart" optimized governor for the hero!
 
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SMARTMAX
+	tristate "'smartmax' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'smartmax' - a "smart" optimized governor!
 	  If in doubt, say N.
 
 config CPU_FREQ_GOV_CONSERVATIVE
