axy17: config: enable dtb img compile

--- a/arch/arm64/configs/rise-a5y17lte_defconfig
+++ b/arch/arm64/configs/rise-a5y17lte_defconfig
@@ -338,6 +338,18 @@ CONFIG_PWRCAL=y
 CONFIG_ARM_TRUSTZONE=y
 
 #
+# SAMSUNG EXYNOS SoCs Support
+#
+# CONFIG_MACH_EXYNOS7880_NONE is not set
+# CONFIG_MACH_EXYNOS7880_A5Y17LTE_CAN_OPEN is not set
+# CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_LDU is not set
+CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_OPEN=y
+# CONFIG_MACH_EXYNOS7880_A5Y17LTE_KOR_ALL is not set
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_LDU is not set
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_OPEN is not set
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_KOR_ALL is not set
+
+#
 # Bus support
 #
 CONFIG_ARM_AMBA=y
@@ -1164,6 +1176,10 @@ CONFIG_CMA_ALIGNMENT=8
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 CONFIG_DTC=y
+CONFIG_EXYNOS_DTBTOOL=y
+CONFIG_EXYNOS_DTBH_PLATFORM_CODE=0x50a6
+CONFIG_EXYNOS_DTBH_SUBTYPE_CODE=0x217584da
+CONFIG_EXYNOS_DTBH_PAGE_SIZE=2048
 CONFIG_OF=y
 
 #
