--- a/arch/arm64/configs/treble-a7y17lte_defconfig
+++ b/arch/arm64/configs/treble-a7y17lte_defconfig
@@ -3566,6 +3566,7 @@ CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_SCHED_AVG_NR_RUNNING=y
 CONFIG_EXYNOS_HOTPLUG_GOVERNOR=y
 CONFIG_EXYNOS_PM_DVS=y
+CONFIG_STATE_NOTIFIER=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
