--- a/arch/arm64/configs/rise-a7y17lte_defconfig
+++ b/arch/arm64/configs/rise-a7y17lte_defconfig
@@ -533,6 +533,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BOOSTACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CAFACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTRODEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
@@ -563,6 +564,7 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_BOOSTACTIVE=y
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELECTRODEMAND=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
