--- a/arch/arm64/configs/rise-a5y17lte_defconfig
+++ b/arch/arm64/configs/rise-a5y17lte_defconfig
@@ -617,6 +617,7 @@ CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 #
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_INPUT_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
