--- a/arch/arm64/configs/rise-a7y17lte_defconfig
+++ b/arch/arm64/configs/rise-a7y17lte_defconfig
@@ -425,6 +425,7 @@ CONFIG_TIGHT_PGDAT_BALANCE=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_MMAP_READAROUND_LIMIT=16
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 # CONFIG_XEN is not set
