configs: Set default readahead to 2048kB This should result in a bit better boot times

--- a/arch/arm64/configs/rise-a5y17lte_defconfig
+++ b/arch/arm64/configs/rise-a5y17lte_defconfig
@@ -430,6 +430,7 @@ CONFIG_MMAP_READAROUND_LIMIT=16
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_LARGE_DIRTY_BUFFER is not set
 CONFIG_MAX_DIRTY_THRESH_PAGES=0
+CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 # CONFIG_XEN is not set
