arm64: define dtb targets
Co-authored-by: BlackMesa123 <brother12@hotmail.it>
Change-Id: If33214abfed6fbc8b879589c201c04dc48f7e313

--- a/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
@@ -306,6 +306,9 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_SOC_EXYNOS7870 is not set
 CONFIG_ARCH_EXYNOS7=y
 CONFIG_SOC_EXYNOS7880=y
+# CONFIG_MACH_EXYNOS7880_NONE is not set
+CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_OPEN=y
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_OPEN is not set
 # CONFIG_SOC_EXYNOS8890 is not set
 # CONFIG_SOC_EXYNOS8890_EVT1 is not set
 # CONFIG_ARCH_EXYNOS8 is not set
