drivers: input: Add HALL_EVENT_REVERSE
* For whatever reason, in Android Q samsung is reading the reverse value of HALL_IC response. This commit fixes smart covers on OneUI 2.0
* This is the excat same mehthod they use in official Q devices to fix this "bug" just modified for 8890 HALL driver
* This should ONLY be enabled on OneUI 2 target. using this on Pie will break smart covers
Signed-off-by: ananjaser1211 <ananjaser@gmail.com>

--- a/arch/arm64/configs/exynos7880-a7y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a7y17lte_eur_defconfig
@@ -1538,6 +1538,7 @@ CONFIG_HALL=y
 CONFIG_CERTIFY_HALL=y
 # CONFIG_CERTIFY_HALL_NFC_WA is not set
 # CONFIG_SENSORS_HALL_FOLDER is not set
+CONFIG_HALL_EVENT_REVERSE=y
 
 #
 # Input Device Drivers
