--- a/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
@@ -1535,6 +1535,7 @@ CONFIG_HALL=y
 CONFIG_CERTIFY_HALL=y
 # CONFIG_CERTIFY_HALL_NFC_WA is not set
 # CONFIG_SENSORS_HALL_FOLDER is not set
+CONFIG_HALL_EVENT_REVERSE=y
 
 #
 # Input Device Drivers
