universal7880: Remove permissive cmdline

--- a/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
@@ -438,7 +438,7 @@ CONFIG_ARM64_UAO=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
