universal7880: Enable new watchdog configs

--- a/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
@@ -2117,13 +2117,15 @@ CONFIG_WATCHDOG_CORE=y
 #
 # Watchdog Device Drivers
 #
-# CONFIG_SOFT_WATCHDOG is not set
+CONFIG_SOFT_WATCHDOG=y
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_XILINX_WATCHDOG is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
 CONFIG_HAVE_S3C2410_WATCHDOG=y
 CONFIG_S3C2410_WATCHDOG=y
 # CONFIG_DW_WATCHDOG is not set
+# CONFIG_ALIM7101_WDT is not set
+# CONFIG_I6300ESB_WDT is not set
 # CONFIG_MEN_A21_WDT is not set
 
 #
@@ -3507,6 +3509,7 @@ CONFIG_SEC_UPLOAD=y
 CONFIG_ARGOS=y
 # CONFIG_SENTINEL is not set
 # CONFIG_SEC_FACTORY is not set
+CONFIG_SEC_DEBUG_SOFTDOG_PWDT=y
 
 #
 # Samsung TN logging feature
