dts: Early mount EFS and drop verify flags from SYSTEM

--- a/arch/arm64/boot/dts/exynos7880-a5y17lte_common.dtsi
+++ b/arch/arm64/boot/dts/exynos7880-a5y17lte_common.dtsi
@@ -99,11 +99,18 @@
 					dev = "/dev/block/platform/13540000.dwmmc0/by-name/SYSTEM";
 					type = "ext4";
 					mnt_flags = "ro,errors=panic,noload";
-					fsmgr_flags = "wait,verify";
+					fsmgr_flags = "wait";
+				};
+				efs {
+					compatible = "android,efs";
+					dev = "/dev/block/platform/13540000.dwmmc0/by-name/EFS";
+					type = "ext4";
+					mnt_flags = "noatime,nosuid,nodev,noauto_da_alloc,discard,journal_checksum,data=ordered,errors=panic";
+					fsmgr_flags = "wait,check";
 				};
 			};
 		};
-	};
+	};	
 
 	pinctrl@139B0000 {
 		/* Warm reset information from AP */
