configs: Update configs with changes from treble and OneUI kernel

--- a/arch/arm64/configs/treble-a7y17lte_defconfig
+++ b/arch/arm64/configs/treble-a7y17lte_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.91 Kernel Configuration
+# Linux/arm64 3.18.140 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -49,7 +49,7 @@ CONFIG_SWAP=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
-CONFIG_USELIB=y
+# CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
@@ -3465,6 +3465,8 @@ CONFIG_ION_EXYNOS_SIZE_SECTBL=0
 CONFIG_ION_EXYNOS_SIZE_G2D_WFD=0
 CONFIG_ION_EXYNOS_SIZE_VIDEO=0
 CONFIG_ION_EXYNOS_SIZE_MFC_NFWVIDEO=0
+# CONFIG_FIQ_DEBUGGER is not set
+# CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 # CONFIG_LTE_GDM724X is not set
@@ -4342,6 +4344,7 @@ CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
