--- a/arch/arm64/configs/oneui-a5y17lte_defconfig
+++ b/arch/arm64/configs/oneui-a5y17lte_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.91 Kernel Configuration
+# Linux/arm64 3.18.140 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -49,7 +49,7 @@ CONFIG_SWAP=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
-CONFIG_USELIB=y
+# CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
@@ -148,7 +148,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
@@ -236,7 +236,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-CONFIG_MODULE_FORCE_LOAD=y
+# CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
@@ -290,6 +290,7 @@ CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
+CONFIG_OLAF_SUPPORT=y
 
 #
 # Platform selection
@@ -311,6 +312,18 @@ CONFIG_SOC_EXYNOS7880=y
 # CONFIG_ARCH_EXYNOS8 is not set
 CONFIG_PWRCAL=y
 CONFIG_ARM_TRUSTZONE=y
+
+#
+# SAMSUNG EXYNOS SoCs Support
+#
+# CONFIG_MACH_EXYNOS7880_NONE is not set
+# CONFIG_MACH_EXYNOS7880_A5Y17LTE_CAN_OPEN is not set
+# CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_LDU is not set
+CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_OPEN=y
+# CONFIG_MACH_EXYNOS7880_A5Y17LTE_KOR_ALL is not set
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_LDU is not set
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_OPEN is not set
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_KOR_ALL is not set
 
 #
 # Bus support
@@ -410,7 +423,7 @@ CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_UNMAP_KERNEL_AT_EL0=y
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -420,16 +433,13 @@ CONFIG_SETEND_EMULATION=y
 #
 # ARMv8.1 architectural features
 #
-CONFIG_ARM64_PAN=y
-CONFIG_ARM64_UAO=y
+# CONFIG_ARM64_PAN is not set
+# CONFIG_ARM64_UAO is not set
 
 #
 # Boot options
 #
 CONFIG_CMDLINE=""
-# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
-CONFIG_CMDLINE_EXTEND=y
-# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
@@ -437,7 +447,8 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_UH_RKP is not set
 # CONFIG_RKP_KDP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7880-a5y17lte_eur_open_00 exynos7880-a5y17lte_eur_open_01 exynos7880-a5y17lte_eur_open_02 exynos7880-a5y17lte_eur_open_03 exynos7880-a5y17lte_eur_open_05 exynos7880-a5y17lte_eur_open_07 exynos7880-a5y17lte_eur_open_08"
 
 #
 # Userspace binary formats
@@ -1078,6 +1089,10 @@ CONFIG_CMA_ALIGNMENT=8
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 CONFIG_DTC=y
+CONFIG_EXYNOS_DTBTOOL=y
+CONFIG_EXYNOS_DTBH_PLATFORM_CODE=0x50a6
+CONFIG_EXYNOS_DTBH_SUBTYPE_CODE=0x217584da
+CONFIG_EXYNOS_DTBH_PAGE_SIZE=2048
 CONFIG_OF=y
 
 #
@@ -1095,6 +1110,7 @@ CONFIG_OF_RESERVED_MEM=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
@@ -1520,6 +1536,7 @@ CONFIG_HALL=y
 CONFIG_CERTIFY_HALL=y
 # CONFIG_CERTIFY_HALL_NFC_WA is not set
 # CONFIG_SENSORS_HALL_FOLDER is not set
+CONFIG_HALL_EVENT_REVERSE=y
 
 #
 # Input Device Drivers
@@ -2103,13 +2120,15 @@ CONFIG_WATCHDOG_CORE=y
 #
 # Watchdog Device Drivers
 #
-# CONFIG_SOFT_WATCHDOG is not set
+CONFIG_SOFT_WATCHDOG=y
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_XILINX_WATCHDOG is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
 CONFIG_HAVE_S3C2410_WATCHDOG=y
 CONFIG_S3C2410_WATCHDOG=y
 # CONFIG_DW_WATCHDOG is not set
+# CONFIG_ALIM7101_WDT is not set
+# CONFIG_I6300ESB_WDT is not set
 # CONFIG_MEN_A21_WDT is not set
 
 #
@@ -2465,8 +2484,6 @@ CONFIG_MALI_RT_PM=y
 CONFIG_MALI_EXYNOS_TRACE=y
 CONFIG_MALI_DEBUG_SYS=y
 CONFIG_MALI_EXPERT=y
-CONFIG_MALI_PLATFORM_THIRDPARTY=y
-CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="exynos"
 # CONFIG_MALI_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_SYSTEM_TRACE is not set
@@ -2509,6 +2526,9 @@ CONFIG_MALI_PLATFORM_NAME="exynos"
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 CONFIG_FB_CMDLINE=y
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
 CONFIG_FB_CFB_FILLRECT=y
@@ -3072,7 +3092,7 @@ CONFIG_USB_U_SERIAL=y
 CONFIG_USB_RNDIS_MULTIPACKET=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
+CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 # CONFIG_USB_DUN_SUPPORT is not set
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
@@ -3492,6 +3512,7 @@ CONFIG_SEC_UPLOAD=y
 CONFIG_ARGOS=y
 # CONFIG_SENTINEL is not set
 # CONFIG_SEC_FACTORY is not set
+CONFIG_SEC_DEBUG_SOFTDOG_PWDT=y
 
 #
 # Samsung TN logging feature
@@ -4052,10 +4073,6 @@ CONFIG_SDFAT_DEBUG=y
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_SDFAT_STATISTICS=y
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_VIRTUAL_XATTR=y
-CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_EXFAT_SUPPORT_STLOG=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -4223,17 +4240,7 @@ CONFIG_HAVE_DEBUG_KMEMLEAK=y
 #
 # Debug Lockups and Hangs
 #
-CONFIG_LOCKUP_DETECTOR=y
-CONFIG_HARDLOCKUP_DETECTOR_OTHER_CPU=y
-CONFIG_HARDLOCKUP_DETECTOR=y
-CONFIG_BOOTPARAM_HARDLOCKUP_PANIC=y
-CONFIG_BOOTPARAM_HARDLOCKUP_PANIC_VALUE=1
-CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
-CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=1
-CONFIG_DETECT_HUNG_TASK=y
-CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
-# CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
-CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
+# CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=0
@@ -4344,6 +4351,7 @@ CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
@@ -4366,8 +4374,8 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-CONFIG_MST_LDO=y
-CONFIG_INTEGRITY=y
+# CONFIG_MST_LDO is not set
+# CONFIG_INTEGRITY is not set
 # CONFIG_INTEGRITY_SIGNATURE is not set
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
