security: Add option for force permissive and enable it for treble
Signed-off-by: Simon1511 <simon2002.schoenmackers@gmail.com>

--- a/security/selinux/Kconfig
+++ b/security/selinux/Kconfig
@@ -131,3 +131,9 @@ config SECURITY_SELINUX_POLICYDB_VERSION_MAX_VALUE
 	  installed under /etc/selinux/$SELINUXTYPE/policy, where
 	  SELINUXTYPE is defined in your /etc/selinux/config.
 
+config FORCE_PERMISSIVE
+	bool "NSA SELinux Permissive"
+	default n
+	help
+	  This forces the kernel to run in permissive mode.
+
