--- a/arch/arm64/configs/treble-a5y17lte_defconfig
+++ b/arch/arm64/configs/treble-a5y17lte_defconfig
@@ -4356,6 +4356,7 @@ CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
 CONFIG_HARDENED_USERCOPY=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
 CONFIG_SECURITY_SELINUX=y
+CONFIG_FORCE_PERMISSIVE=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
