nfc: Only compile with Q NFC changes on OneUI targets
Signed-off-by: Simon1511 <simon2002.schoenmackers@gmail.com>

--- a/drivers/nfc/Kconfig
+++ b/drivers/nfc/Kconfig
@@ -120,6 +120,12 @@ config ESE_SECURE_GPIO
         string "gpio group for ese"
 
 
+config Q_NFC
+	bool "Q NFC Driver"
+	default n
+	help
+	  This enables the newer NFC driver.
+
 source "drivers/nfc/pn544/Kconfig"
 source "drivers/nfc/microread/Kconfig"
 source "drivers/nfc/nfcmrvl/Kconfig"
