--- a/arch/arm64/configs/oneui-a5y17lte_defconfig
+++ b/arch/arm64/configs/oneui-a5y17lte_defconfig
@@ -1031,6 +1031,7 @@ CONFIG_RFKILL_PM=y
 CONFIG_SEC_NFC=y
 CONFIG_SEC_NFC_PRODUCT_N5=y
 CONFIG_SEC_NFC_IF_I2C=y
+CONFIG_Q_NFC=y
 CONFIG_ESE_P3_LSI=y
 CONFIG_ESE_SECURE=y
 CONFIG_ESE_SECURE_SPI_PORT=0
