input: Add config for FB_NOTIFIER We only want FB Notifier on AOSP and Treble targets
Signed-off-by: Simon1511 <simon2002.schoenmackers@gmail.com>

--- a/arch/arm64/configs/lineage-a5y17lte_defconfig
+++ b/arch/arm64/configs/lineage-a5y17lte_defconfig
@@ -2522,6 +2522,7 @@ CONFIG_MALI_PLATFORM_NAME="exynos"
 #
 # Frame buffer Devices
 #
+CONFIG_FB_NOTIFIER=y
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 CONFIG_FB_CMDLINE=y
