--- a/arch/arm64/configs/treble-a5y17lte_defconfig
+++ b/arch/arm64/configs/treble-a5y17lte_defconfig
@@ -2522,6 +2522,7 @@ CONFIG_MALI_PLATFORM_NAME="exynos"
 #
 # Frame buffer Devices
 #
+CONFIG_FB_NOTIFIER=y
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 CONFIG_FB_CMDLINE=y
