qcacld-2.0: Load grippower.info only from vendor on OneUI and Treble targets
Signed-off-by: Simon1511 <simon2002.schoenmackers@gmail.com>

--- a/drivers/net/wireless/qcacld-2.0/Kconfig
+++ b/drivers/net/wireless/qcacld-2.0/Kconfig
@@ -62,4 +62,8 @@ config WLAN_UDP_RESPONSE_OFFLOAD
 	bool "Enable UDP response offload feature"
 	default n
 
+config GRIPPOWER_VENDOR
+	bool "Load grippower.info from vendor"
+	default n
+
 endif # QCA_CLD_WLAN
