--- a/arch/arm64/configs/oneui-a7y17lte_defconfig
+++ b/arch/arm64/configs/oneui-a7y17lte_defconfig
@@ -1505,6 +1505,7 @@ CONFIG_QCOM_LTE_COEX=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
 # CONFIG_WLAN_UDP_RESPONSE_OFFLOAD is not set
+CONFIG_GRIPPOWER_VENDOR=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
