--- a/arch/arm64/configs/oneui-a5y17lte_defconfig
+++ b/arch/arm64/configs/oneui-a5y17lte_defconfig
@@ -445,12 +445,12 @@ CONFIG_MMAP_READAROUND_LIMIT=16
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_LARGE_DIRTY_BUFFER is not set
 CONFIG_MAX_DIRTY_THRESH_PAGES=0
-CONFIG_SECCOMP=y
 CONFIG_VM_MAX_READAHEAD=2048
+CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
+CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -460,13 +460,16 @@ CONFIG_SETEND_EMULATION=y
 #
 # ARMv8.1 architectural features
 #
-# CONFIG_ARM64_PAN is not set
-# CONFIG_ARM64_UAO is not set
+CONFIG_ARM64_PAN=y
+CONFIG_ARM64_UAO=y
 
 #
 # Boot options
 #
 CONFIG_CMDLINE=""
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
@@ -2573,6 +2576,8 @@ CONFIG_MALI_RT_PM=y
 CONFIG_MALI_EXYNOS_TRACE=y
 CONFIG_MALI_DEBUG_SYS=y
 CONFIG_MALI_EXPERT=y
+# CONFIG_MALI_PLATFORM_THIRDPARTY is not set
+# CONFIG_MALI_PLATFORM_THIRDPARTY_NAME is not set
 # CONFIG_MALI_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_SYSTEM_TRACE is not set
@@ -2616,9 +2621,6 @@ CONFIG_MALI_PLATFORM_NAME="exynos"
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 CONFIG_FB_CMDLINE=y
-# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
-CONFIG_CMDLINE_EXTEND=y
-# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
 CONFIG_FB_CFB_FILLRECT=y
@@ -4164,6 +4166,10 @@ CONFIG_SDFAT_DEBUG=y
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_SDFAT_STATISTICS=y
+# CONFIG_EXFAT_FS is not set
+# CONFIG_EXFAT_VIRTUAL_XATTR is not set
+# CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL is not set
+# CONFIG_EXFAT_SUPPORT_STLOG is not set
 # CONFIG_NTFS_FS is not set
 
 #
