--- a/arch/arm64/configs/lineage-a5y17lte_defconfig
+++ b/arch/arm64/configs/lineage-a5y17lte_defconfig
@@ -313,6 +313,7 @@ CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
+# CONFIG_OLAF_SUPPORT is not set
 
 #
 # Platform selection
@@ -343,10 +344,10 @@ CONFIG_ARM_TRUSTZONE=y
 # CONFIG_MACH_EXYNOS7880_NONE is not set
 # CONFIG_MACH_EXYNOS7880_A5Y17LTE_CAN_OPEN is not set
 # CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_LDU is not set
-# CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_OPEN is not set
+CONFIG_MACH_EXYNOS7880_A5Y17LTE_EUR_OPEN=y
 # CONFIG_MACH_EXYNOS7880_A5Y17LTE_KOR_ALL is not set
 # CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_LDU is not set
-CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_OPEN=y
+# CONFIG_MACH_EXYNOS7880_A7Y17LTE_EUR_OPEN is not set
 # CONFIG_MACH_EXYNOS7880_A7Y17LTE_KOR_ALL is not set
 
 #
@@ -476,7 +477,8 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_UH_RKP is not set
 # CONFIG_RKP_KDP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7880-a5y17lte_eur_open_00 exynos7880-a5y17lte_eur_open_01 exynos7880-a5y17lte_eur_open_02 exynos7880-a5y17lte_eur_open_03 exynos7880-a5y17lte_eur_open_05 exynos7880-a5y17lte_eur_open_07 exynos7880-a5y17lte_eur_open_08"
 
 #
 # Userspace binary formats
@@ -1118,6 +1120,7 @@ CONFIG_RFKILL_PM=y
 CONFIG_SEC_NFC=y
 CONFIG_SEC_NFC_PRODUCT_N5=y
 CONFIG_SEC_NFC_IF_I2C=y
+# CONFIG_Q_NFC is not set
 CONFIG_ESE_P3_LSI=y
 CONFIG_ESE_SECURE=y
 CONFIG_ESE_SECURE_SPI_PORT=0
@@ -1624,6 +1627,7 @@ CONFIG_HALL=y
 CONFIG_CERTIFY_HALL=y
 # CONFIG_CERTIFY_HALL_NFC_WA is not set
 # CONFIG_SENSORS_HALL_FOLDER is not set
+# CONFIG_HALL_EVENT_REVERSE is not set
 
 #
 # Input Device Drivers
@@ -2215,6 +2219,8 @@ CONFIG_WATCHDOG_CORE=y
 CONFIG_HAVE_S3C2410_WATCHDOG=y
 CONFIG_S3C2410_WATCHDOG=y
 # CONFIG_DW_WATCHDOG is not set
+# CONFIG_ALIM7101_WDT is not set
+# CONFIG_I6300ESB_WDT is not set
 # CONFIG_MEN_A21_WDT is not set
 
 #
@@ -3598,6 +3604,7 @@ CONFIG_SEC_UPLOAD=y
 CONFIG_ARGOS=y
 # CONFIG_SENTINEL is not set
 # CONFIG_SEC_FACTORY is not set
+CONFIG_SEC_DEBUG_SOFTDOG_PWDT=y
 
 #
 # Samsung TN logging feature
@@ -4452,6 +4459,7 @@ CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+# CONFIG_SECURITY_PERF_EVENTS_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
